syntax = "proto3";

package v1.ampbv1;

import "v1/ampb/msg_anime_movie.proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/ampb;ampbv1";

message UpdateAnimeMovieRequest {
  int64           animeID                             = 1;
  optional string originalTitle                       = 2;
  optional google.protobuf.Timestamp aired            = 3;
  optional int32                     releaseYear      = 4;
  optional string                    rating           = 5;
  optional google.protobuf.Duration duration          = 6;
  optional string                   portraitPoster    = 7;
  optional string                   portraitBlurHash  = 8;
  optional string                   landscapePoster   = 9;
  optional string                   landscapeBlurHash = 10;
  optional string                   showType          = 11;
}

message UpdateAnimeMovieResponse {
  AnimeMovieResponse animeMovie = 1;
}